# polaris_mcfg

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  Requirements.md  SECURITY.md  pyproject.toml
.claude/: launch.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: index.html
docs/demo/: build.py  index.html
docs/design/: 01-architecture.md  02-metrics-schema.md  03-extractor.md  04-comparator.md  05-generator.md  06-validator.md  07-optional-metrics.md  08-html-and-render.md  09-gpos-kerning.md  10-match-upm-and-format.md  11-gsub-shaped-advances.md  12-render-extractor.md
samples/: end_to_end_render_vs_file.py  render_vs_file_accuracy.py  run_demo.py  sample_korean.txt
samples/visual_test/: README.md  build.py
src/polaris_mcfg/: __init__.py  cli.py  comparator.py  extractor.py  generator.py  render.py  report.py  schema.py  validator.py
src/polaris_mcfg/render_extractor/: __init__.py  analyzer.py  incremental.py  kerning.py  orchestrator.py  reference.py  shaped.py  units.py
src/polaris_mcfg/render_extractor/backends/: __init__.py  base.py  browser_backend.py  freetype_backend.py
tests/: conftest.py  test_codex_review.py  test_comparator.py  test_extractor.py  test_generator.py  test_generator_kern_vmtx_fixes.py  test_gpos_kerning.py  test_gsub_overrides.py  test_match_upm_and_format.py  test_optional_metrics.py  test_render_and_html.py  test_review_fixes.py  test_schema.py  test_validator.py
tests/render_extractor/: test_p10_pixel_only.py  test_p11_two_modes.py  test_p1_freetype_backend.py  test_p2_basic_metrics.py  test_p3_hangul_monospace.py  test_p4_kerning.py  test_p5_browser_backend.py  test_p6_integration.py  test_p8_full_reference.py  test_p9_incremental.py
