[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polaris-mcfg"
version = "0.3.0"
description = "Metric-Compatible Font Generator: extract layout metrics from a source font and apply them to a freely-licensed font's glyph design."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Miles Haeseok Lee" }]
keywords = ["font", "fontTools", "metrics", "ttf", "otf", "hangul"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics :: Editors :: Vector-Based",
    "Topic :: Text Processing :: Fonts",
]
dependencies = [
    # WOFF2 output is a core feature (--match-upm auto-selects WOFF2 to
    # work around the Chromium TTF sanitizer issue), so brotli is a hard
    # runtime dep, not a fontTools optional.
    "fonttools[woff]>=4.50",
    "click>=8.1",
]

[project.optional-dependencies]
render = ["uharfbuzz>=0.39"]
# Render-based extractor (M8): pixel-measurement of rendered glyphs.
# - `render-extract`: FreeType backend (file-parsing happens inside FT,
#   not in our code; ±1 unit accuracy).
# - `render-extract-browser`: Playwright-based browser backend (strongest
#   EULA defense — we never open the font file ourselves; the browser does
#   under @font-face).
render-extract = [
    "freetype-py>=2.4",
    "Pillow>=10.0",
    "numpy>=1.26",
]
render-extract-browser = [
    "playwright>=1.40",
    "Pillow>=10.0",
    "numpy>=1.26",
]
dev = [
    "pytest>=7",
    "uharfbuzz>=0.39",
    "freetype-py>=2.4",
    "Pillow>=10.0",
    "numpy>=1.26",
]

[project.scripts]
mcfg = "polaris_mcfg.cli:main"

[project.urls]
Repository = "https://github.com/PolarisOffice/polaris_mcfg"
Issues = "https://github.com/PolarisOffice/polaris_mcfg/issues"
Changelog = "https://github.com/PolarisOffice/polaris_mcfg/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "browser: tests that require Playwright + Chromium (skipped when not installed)",
]
